# Mathematics-of-Computer-Graphics

./: .gitignore  CMakeLists.txt  README.md
Laboratorium 2 - wektory/: CMakeLists.txt  Vector.cpp  Vector.h  main.cpp
Laboratorium 3 - macierze/: CMakeLists.txt  Matrix4x4.cpp  Matrix4x4.h  Vector4.h  main.cpp
Laboratorium 4 - kwaterniony/: CMakeLists.txt  Kwaterion.cpp  Kwaterion.h  Kwaternion.cpp  Kwaternion.h  main.cpp
Laboratorium 5 - obliczanie przeciec/: CMakeLists.txt  main.cpp
Laboratorium 5 - obliczanie przeciec/Robocze/: mainCzysty.cpp  mainGłupi.cpp  mainKomentarze.cpp  mainMądry.cpp
Laboratorium 6 - Ray Tracing/: CMakeLists.txt
Laboratorium 6 - wizualizacja wynikow/: CMakeLists.txt  main.cpp
Laboratorium 6 - wizualizacja wynikow/Robocze/: mainKomentarze.cpp
Zadanie 1/: Vector.cpp  Vector.h  main.cpp
Zadanie 2/: Vector3.cpp  Vector3.h  Vector4.cpp
