cmake_minimum_required(VERSION 4.0)
project(Mathematics_of_Computer_Graphics)

set(CMAKE_CXX_STANDARD 14)

include_directories("Laboratorium 4 - kwaterniony")

# Dodawanie podkatalogów. 

add_subdirectory("Laboratorium 2 - wektory")
add_subdirectory("Laboratorium 3 - macierze")
add_subdirectory("Laboratorium 4 - kwaterniony")
add_subdirectory("Laboratorium 5 - obliczanie przeciec")
add_subdirectory("Laboratorium 6 - wizualizacja wynikow")
